<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>eu.okaeri</groupId>
        <artifactId>okaeri-configs</artifactId>
        <version>5.0.13</version>
    </parent>

    <artifactId>okaeri-configs-core-test</artifactId>
    <name>okaeri-configs (core-test)</name>
    <description>Core functionality tests for okaeri-configs</description>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
    </properties>

    <dependencies>
        <!-- Core library -->
        <dependency>
            <groupId>eu.okaeri</groupId>
            <artifactId>okaeri-configs-core</artifactId>
            <version>${project.version}</version>
        </dependency>

        <!-- Test commons (shared test utilities) -->
        <dependency>
            <groupId>eu.okaeri</groupId>
            <artifactId>okaeri-configs-test-commons</artifactId>
            <version>${project.version}</version>
            <scope>test</scope>
        </dependency>

        <!-- YAML SnakeYAML for serialization testing -->
        <dependency>
            <groupId>eu.okaeri</groupId>
            <artifactId>okaeri-configs-yaml-snakeyaml</artifactId>
            <version>${project.version}</version>
            <scope>test</scope>
        </dependency>

        <!-- JUnit 5 -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>5.8.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>5.8.1</version>
            <scope>test</scope>
        </dependency>

        <!-- AssertJ -->
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>3.24.2</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

</project>
